--- a/style.css
+++ b/style.css
@@ -83,8 +83,6 @@ nav{
     align-items: center;
     margin: 0px 15px;
 }
-
-
 .nav-bottom{
     display: flex;
     align-items: center;
@@ -99,4 +97,27 @@ nav{
     align-items: center;
     gap: 5px;
     font-weight: 500;
+}
+.header-slider ul{
+    display: flex;
+    overflow-y: hidden;
+}
+.header-img{
+    max-width: 100%;
+    mask-image: linear-gradient(to bottom, #0000000 50%, transparent 100%);
+}
+.header-slider a{
+    position: absolute;
+    top: 20%;
+    z-index: 1;
+    padding: 5vh 1vw;
+    background: #ffffff4f;
+    color: #0000007b;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 18px;
+    cursor: pointer;
+}
+.control_next{
+    right: 0;
 }
